Fix header overlap

--- a/public/index.css
+++ b/public/index.css
@@ -32,7 +32,7 @@ footer {
 }
 
 .movedown {
-  /* padding-top: 50px; */
+  padding-top: 50px;
   margin-top: 65px;
 }
 
